--- a/_quarto.yml
+++ b/_quarto.yml
@@ -8,13 +8,23 @@ website:
     left:
       - href: index.qmd
         text: Home
+      - cv.qmd
+      - Rtools.qmd
       - about.qmd
+    logo: imgs/butvec.logo.svg
+    search: true
+    right:
+      - text: "{{< iconify academicons orcid >}}"
+        href: "https://orcid.org/0000-0003-1316-2546"
+      - text: "{{< iconify academicons google-scholar-square >}}"
+        href: "https://scholar.google.com/citations?user=E8yonpAAAAAJ&hl"
+      - text: "{{< iconify fa6-brands twitter >}}"
+        href: "https://twitter.com/gabriele_midolo"
 
 format:
   html:
-    theme: cosmo
-    css: styles.css
+    theme: flatly
     toc: true
-
+  
+        
 editor: visual
-
