--- a/_quarto.yml
+++ b/_quarto.yml
@@ -10,21 +10,22 @@ website:
         text: Home
       - cv.qmd
       - Rtools.qmd
-      - about.qmd
+      - art.qmd
     logo: imgs/butvec.logo.svg
     search: true
     right:
-      - text: "{{< iconify academicons orcid >}}"
-        href: "https://orcid.org/0000-0003-1316-2546"
+      - text: "{{< iconify academicons researchgate-square >}}"
+        href: "https://www.researchgate.net/profile/Gabriele-Midolo"
       - text: "{{< iconify academicons google-scholar-square >}}"
         href: "https://scholar.google.com/citations?user=E8yonpAAAAAJ&hl"
       - text: "{{< iconify fa6-brands twitter >}}"
         href: "https://twitter.com/gabriele_midolo"
+      - text: "{{< iconify academicons orcid >}}"
+        href: "https://orcid.org/0000-0003-1316-2546"
 
 format:
   html:
     theme: flatly
     toc: true
-  
-        
+
 editor: visual
