--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,7 @@
 .Rhistory
 .RData
 .Ruserdata
-
 /.quarto/
+*.csv
+posts/intrpl_houseprince/data/models/RF.last_fit.rds
+posts/intrpl_houseprince/data/models/RF.preds.csv.gz
