--- a/_quarto.yml
+++ b/_quarto.yml
@@ -22,7 +22,7 @@ website:
     search: true
     right:
       - text: "{{< iconify fa6-brands linkedin >}}"
-        href: "https://www.linkedin.com/in/gabriele-midolo-a49a99158"
+        href: "https://www.linkedin.com/in/gmidolo92/"
       - text: "{{< iconify fa6-brands twitter >}}"
         href: "https://twitter.com/gabriele_midolo"
       - text: "{{< iconify academicons researchgate-square >}}"
