--- a/_quarto.yml
+++ b/_quarto.yml
@@ -18,6 +18,7 @@ website:
       - icon: envelope-at-fill
         href: contact_me.qmd
         text: Contact me
+    favicon: imgs/butvec.logo.png
     logo: imgs/butvec.logo.svg
     search: true
     right:
@@ -31,7 +32,8 @@ website:
         href: "https://scholar.google.com/citations?user=E8yonpAAAAAJ&hl"
       - text: "{{< iconify academicons orcid >}}"
         href: "https://orcid.org/0000-0003-1316-2546"
-
+      - text: "{{< iconify fa6-brands github >}}"
+        href: "https://github.com/gmidolo"
 
 format:
   html:
